[gd_scene load_steps=4 format=3 uid="uid://cp140n2vejqvk"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_3u41r"]
[ext_resource type="Script" path="res://addons/BTransition/Transitioner.gd" id="2_r7hl6"]

[sub_resource type="LabelSettings" id="LabelSettings_vv1ug"]
line_spacing = 4.0
font_color = Color(0, 0, 0, 1)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3u41r")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.819608, 0.819608, 0.819608, 1)

[node name="TransUp" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.388889
anchor_top = 0.0493827
anchor_right = 0.611111
anchor_bottom = 0.259259
grow_horizontal = 2
text = "Transition Up"
metadata/_edit_use_anchors_ = true

[node name="TransDown" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.388889
anchor_top = 0.740741
anchor_right = 0.611111
anchor_bottom = 0.950617
grow_horizontal = 2
grow_vertical = 0
text = "Transition Down"
metadata/_edit_use_anchors_ = true

[node name="TransLeft" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.056
anchor_top = 0.395
anchor_right = 0.278
anchor_bottom = 0.605
offset_left = -0.512001
offset_top = 0.0399933
offset_right = -0.256042
offset_bottom = -0.0400085
grow_vertical = 2
text = "Transition Left"

[node name="TransRight" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.722
anchor_top = 0.395
anchor_right = 0.944
anchor_bottom = 0.605
offset_left = 0.25592
offset_top = 0.0399933
offset_right = 0.511963
offset_bottom = -0.0400085
grow_horizontal = 0
grow_vertical = 2
text = "Transition Right"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.350694
anchor_top = 0.436728
anchor_right = 0.649306
anchor_bottom = 0.563272
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="TransitionTIme" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Transition Time: 1s"
label_settings = SubResource("LabelSettings_vv1ug")
horizontal_alignment = 1

[node name="TimeSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = 0.3
max_value = 60.0
step = 0.01
value = 1.0

[node name="WindowResizing" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Allow Window Resizing: false"

[node name="Transitioner" type="Node" parent="."]
script = ExtResource("2_r7hl6")

[connection signal="pressed" from="TransUp" to="." method="_on_trans_up_pressed"]
[connection signal="pressed" from="TransDown" to="." method="_on_trans_down_pressed"]
[connection signal="pressed" from="TransLeft" to="." method="_on_trans_left_pressed"]
[connection signal="pressed" from="TransRight" to="." method="_on_trans_right_pressed"]
[connection signal="value_changed" from="VBoxContainer/TimeSlider" to="." method="_on_time_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/WindowResizing" to="." method="_on_window_resizing_pressed"]
